# mlcxx

./: .gitignore  .gitmodules  README.md  install.sh  lcpp.h  makefile  requirements.txt  setup.py  test.cpp
BessaGroup/.temp/: main.aux  main.nav
Ideas/: design_matrix.py  pinn_kernel.py
Tools/: test_mechanics.py
Tools/F3DASM/: test.py
docs/: algo.md  data.md  examples.md  src.md  util.md
example/: CMakeLists.txt  example.cpp
example2/: Makefile  example  example.cpp
examples/: ann_reg.cpp  openml-report.cpp  simple.cpp
ideas/: ali  check_J.py  circle.py  custom.py  dof.py  fda_example.py  functional_pca.py  gp_path_gen.py  hatmatrix.py  hey  hey_impl  hyp_test.py  hyp_test_irr.py  learning_curves_tom.py  look.py  look_at_variance_hyp_test.py  model2.pt  model_selection.py  nonlinleast.py  nonlinleast2.py  normalpca.py  path-0.npy  path-1.npy  path-2.npy  path-3.npy  path-4.npy  path-5.npy  path-6.npy  path-7.npy  path-8.npy  path-9.npy  phi_4.tex  pinn_kernel.py  randomInclusion.h5  randomInclusion.xdmf  randomInclusions2DCircle.msh  random_walk.py  recursive_opt.py  regularize.py  semi_param.py  (+16 more)
lcpp_bits/: example.cpp  lcpp.h  makefile  test.cpp  unit_tests.cpp
lcxx_bits/: example.cpp
mlcxx_bits/: Makefile  check_lcdb.cpp  example.cpp  funcs.h  generate_lc.cpp  headers.h  input2.pro  main_func.h  main_input.h  makefile  mlcxx  mlcxx.cpp  model_selection.cpp  new_spkr_helper.cpp  plot_risk.sh  unit_tests.cpp
pytorch_/: models.py
references/: LabTalk.bib  PR.bib
tests/: test_algo.h  test_data.h  test_src.h  tests.h
tools/: ali.cpp  qrgen.py
(+12003 files in other folders)
